--- a/index.html
+++ b/index.html
@@ -337,13 +337,13 @@
         progressBar.style.width = `${((currentQuestionIndex + 1) / shuffledQuestions.length) * 100}%`;
         questionCounter.textContent = `Câu ${currentQuestionIndex + 1}/${shuffledQuestions.length}`;
         
-        // ** LOGIC MỚI ĐỂ HIỂN THỊ CÂU HỎI **
+        // ** LOGIC ĐÃ CẬP NHẬT **
         if (question.sentence && question.instruction) {
             // Dành cho câu hỏi đồng nghĩa/trái nghĩa có cấu trúc mới
             questionText.innerHTML = `
                 <div class="w-full">
-                    <p class="italic text-gray-300 mb-3 text-xl md:text-2xl">"${question.sentence}"</p>
-                    <p class="font-semibold text-lg md:text-xl">${question.instruction}</p>
+                    <p class="font-semibold text-lg md:text-xl mb-3">${question.instruction}</p>
+                    <p class="italic text-gray-300 text-xl md:text-2xl">"${question.sentence}"</p>
                 </div>
             `;
         } else {
