--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
      *****************************************************************************/
     const vocabularyQuizFiles = [
         'quizzes/vocabulary/cam18_t1.json'
+        'quizzes/vocabulary/cam18_t2.json'
     ];
     const readingQuizFiles = [
         // 'quizzes/reading/reading_quiz_1.json'
