--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
      * 2. Thêm đường dẫn file đó vào mảng `vocabularyQuizFiles` hoặc `readingQuizFiles` dưới đây.
      *****************************************************************************/
     const vocabularyQuizFiles = [
-        'quizzes/vocabulary/cam18_t1.json'
+        'quizzes/vocabulary/cam18_t1.json',
         'quizzes/vocabulary/cam18_t2.json'
         
     ];
