--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
      *****************************************************************************/
     const vocabularyQuizFiles = [
         'quizzes/vocabulary/cam18_t1.json',
-        'quizzes/vocabulary/cam18_t2.json'
+        'quizzes/vocabulary/cam18_t2.json',
+        'quizzes/vocabulary/cam18_t3.json'
         
     ];
     const readingQuizFiles = [
